[package]
name = "fish_greeting_utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "center"
path = "src/center.rs"

[[bin]]
name = "parse_ascii_art"
path = "src/parse_ascii_art.rs"

[[bin]]
name = "colorize_path"
path = "src/colorize_path.rs"

[[bin]]
name = "horizontal_line"
path = "src/horizontal_line.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
colored = "2.0.0"
itertools = "0.10.3"
substring = "1.4.5"
termion = "1.5.6"
rand = "0.8.5"
hsv = "0.1.1"

[dependencies.clap]
version = "4.4.2"
features = ["derive"]
